--- a/estilo.css
+++ b/estilo.css
@@ -1,17 +1,29 @@
 /* Importação de Fonte */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400&display=swap');
 
+
+:root{
+    --azul-dnc: #0C70F2;
+    --preto-dnc: #303030;
+    --cinza-hover: #C9C9C9;
+    
+    --fonte-padrao: 'Inter';
+}
+
+
     body{
         margin:0px; /* Margem Externa */ 
         padding:0px; /* Margem Interna */
+        
+        background: linear-gradient(180deg, rgba(12, 112, 242, 0.5) 19.91%, rgba(12, 112, 242, 0) 24.84%), #303030;
+        background-repeat: no-repeat;
     }
 
     /* Menu de Navegação Principal */
     #principal{
         width:100%;
         height:100px;
-        border:1px solid black;
-        background-color: #303030;    
+        background-color: var(--preto-dnc);    
         
         display:flex;
         justify-content: space-between;
@@ -29,7 +41,7 @@
         }
 
         #principal div a{
-            font-family: 'Inter';
+            font-family: var(--fonte-padrao);
             font-size:25px;
             font-weight:600;
             color:white;
@@ -37,22 +49,119 @@
         }
 
         #principal div a:hover{
-            color:#CCCCCC;
+            color:var(--cinza-hover);
         }
 
         #principal button{
             margin-right:5%;
-            background-color: #0C70F2;
+            background-color: var(--azul-dnc);
             border:0px;
 
             height:40px;
             width:80px;
 
-            font-family: 'Inter';
+            font-family: var(--fonte-padrao);
             font-size:20px;
             font-weight: 600;
             color:white;
 
             box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);      
             cursor:pointer;      
+        }
+
+    /* Seção Principal do site */
+
+    section{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+
+        margin-top:100px;
+        margin-bottom:100px;
+    }
+
+        header{
+            color:white;
+            font-family: var(--fonte-padrao);
+        }
+
+        header h1{
+            text-transform: uppercase;
+            font-size:80px;
+            font-weight: 900;
+            text-align: center;
+
+            margin-bottom: 20px;
+        }
+
+        header h2{
+            text-align: center;
+            font-size:40px;
+            font-weight: 700;
+
+            margin-bottom: 100px;
+        }
+
+        header .invert{
+            background-color: black;
+            font-weight: bold;
+            padding:5px;
+        }
+
+        /* Formulario */
+
+        form{
+            color:white;
+            font-family: var(--fonte-padrao);
+            font-weight: 600;
+            font-size: 30px;
+            width:600px;
+        }
+
+        .form-group{
+            display: flex;
+            flex-direction: column;
+            margin-top:10px;
+            margin-bottom: 10px;
+        }
+
+        form input{
+            border-radius: 10px;
+            border:0px;
+            height:30px;
+            padding:10px;
+            font-size:20px;            
+        }
+
+        form label{
+            margin: 10px 0px 10px 0px;
+        }
+
+        form input::placeholder{
+            color:rgba(57, 57, 57, 0.5);
+        }
+
+        .checkbox-itens label{
+            font-size:25px;
+        }
+        .checkbox-itens{
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+
+        input[type="checkbox"]{
+            transform: scale(1.7);
+        }
+
+        input[type="submit"]{
+            width:100%;
+            background-color: var(--azul-dnc);
+            height:55px;
+            font-size:32px;
+            color:white;
+            font-weight: 600;
+            box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
+            cursor:pointer;
+            margin-top:80px;
         }
